# learning-blockchain

./: .gitignore  Cargo.toml  Makefile  README.md  foundry.toml  package-lock.json  sample.envrc  todo.md
script/: Counter.s.sol
src/: handlers.rs  index.html  main.rs  mod.rs
src/app/: debugservice.rs  mod.rs  model.rs
src/client/: ethereumclient.rs  mod.rs
src/helper/: mod.rs
src/lab/: mod.rs
src/lab/shared_wallet/: README.md  SharedWallet.sol  form.html  main.rs  result.html  template.html
src/lab/smart_money/: README.md  SmartMoney.sol  form.html  main.rs  result.html  template.html
src/lab/the_blockchain_messenger/: README.md  TheBlockchainMessenger.sol  form.html  main.rs  result.html  template.html
src/lab/voting/: README.md  Voting.sol  form.html  main.rs  result.html  template.html
templates/: account_balances.html  block_details.html  deploying.html  general_details_template.html  index.html  input.css  last_block_details.html  test1.html  test2.html
templates/static/: output.css
