[package]
name = "learning-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-ws = "0.2.5"
async-rwlock = "1.3.0"
chrono = "0.4.31"
ecdsa = "0.16.8"
env_logger = "0.10.0"
ethers = "2.0.10"
ethers-contract = "2.0.10"
ethers-providers = "2.0.10"
ethers-solc = "2.0.10"
futures = "0.3.28"
k256 = "0.13.1"
log = "0.4.20"
markdown = "0.3.0"
secp256k1 = "0.27.0"
serde = { version = "1.0.188", features = ["derive"] }
tera = "1.19.1"
thiserror = "1.0.50"

